# llm-zoomcamp

./: .gitignore  README.md  Untitled.ipynb  common.py  docker-compose.yml  elastic_search.py  embeddings.py  llm.py  logging_config.yaml  main.py  pyproject.toml
.github/: prod_hotfix_template.md  pull_request_template.md
.github/workflows/: path-pr-template-for-hotfix.yml
